# tree-sitter-mlir

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mlir.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
docs/: MLIR_EBNF.md  grammar-design.md  queries.md
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  tags.scm  textobjects.scm
samples/llvm/: addition.llvm.mlir  loadstorecolv.llvm.mlir  loadstorem.llvm.mlir  matmul.llvm.mlir  matmul_tile_repro.llvm.mlir  multiplication.llvm.mlir  reduction.llvm.mlir  relu.llvm.mlir
samples/onnx/: mnist100.onnx.mlir  mnist100_opt.onnx.mlir  shakespeare_opt.onnx.mlir
samples/spar_hl/: addition.shl.mlir  loadstorecolv.shl.mlir  loadstorem.shl.mlir  loadstorerowv.shl.mlir  matmul.shl.mlir  matmul_tile_repro.shl.mlir  multiplication.shl.mlir  reduction.shl.mlir  sigmoid.shl.mlir
samples/spar_ll/: addition.sll.mlir  loadstorem.sll.mlir  loadstorerowv.sll.mlir  matmul.sll.mlir  matmul_tile_repro.sll.mlir  multiplication.sll.mlir  reduction.sll.mlir  sigmoid.sll.mlir
src/: parser.c
test/corpus/: affine.txt  attributes.txt  attributes_ext.txt  controlflow.txt  func.txt  literals.txt  operations.txt  ops_ext.txt  types.txt  types_ext.txt
test/highlight/: highlights.mlir
(+2 files in other folders)
